<resources>
 <!--   <string name="app_name">Password Generator</string>
&lt;!&ndash; TODO: Remove or change this placeholder text &ndash;&gt;
<string name="hello_blank_fragment">Hello blank fragment</string>
<string name="welcome_str">Welcome</string>
<string name="to_str">To</string>-->
    <string name="password_generator_str">Password Generator</string>
    <string name="app_name">Password Generator</string>
    <string name="welcome_to_android_str">Welcome To Android</string>
    <string name="welcome_str">Welcome</string>
    <string name="to_str">To</string>
    <string name="android_str">Android</string>
    <string name="title_activity_sign_up_page">SignUpPage</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_str">Email</string>
    <string name="password_str">Password</string>
    <string name="login_str">Login</string>
    <string name="signup_str">Set PIN</string>
    <string name="movetologin_str">Login</string>
    <string name="movetosignup_str">Sign Up</string>
    <string name="generatepassword_str">Generate Password</string>
    <string name="oldpassword_str">Previous Password</string>
    <string name="newpassword_str">Current Password</string>
    <string name="login_page_heading_str">login page</string>
    <string name="signup_page_heading_str">Sign-Up Page</string>
    <string name="username_str">Auto Generated Username</string>
    <string name="name_str">Name</string>
    <string name="generateusername_str">Generate Username</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id_str">ID</string>
    <string name="title_str">Title</string>
    <string name="loading_please_wait_str">Loading, Please Wait</string>
    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Set Your 4 Digit Pin Here</string>
    <string name="loginPin">* * * *</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="already_have_an_account_str">Already Have an Account?</string>
    <string name="don_t_have_an_account_str">Don\'t have an Account?</string>
    <string name="login_here_str">Login Here</string>
    <string name="create_one_for_free_str">Create one for FREE!!</string>
    <string name="name">Name</string>
    <string name="move_to_login_str">Move to LOGIN</string>
    <string name="heading_will_appear_here_str">Heading will appear here</string>
    <string name="id_will_appear_here_str" />
    <string name="title_will_appear_here_str">Title will Appear Here</string>
   <string name="previous_password_str">Previous Password</string>
   <string name="current_password_str">Current Password</string>
</resources>