<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutV"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="270dp"
        android:text="@string/welcome_str"
        android:textColor="@color/black"
        android:textSize="40sp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/to_str"
        android:textColor="@color/black"
        android:textSize="40sp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt_passgenerator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/password_generator_str"
        android:textColor="@color/black"
        android:textSize="40sp"
        tools:ignore="MissingConstraints" />

</LinearLayout>